--- a/wp-datepicker/css/wpdp_auto_style.css
+++ b/wp-datepicker/css/wpdp_auto_style.css
@@ -6,11 +6,8 @@
 
     
 
-.wp_datepicker_option-1.default .ui-widget{
-    font-family: 'Aladin', cursive;}
-
-                    
-
+.wp_datepicker_option-1 .ui-widget{
+    font-family:'proxima_novaregular'}
 
                     
   
